update index.html, update views.py with different types of context

--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -8,6 +8,9 @@
   <title>{{ title }}</title>
 </head>
 <body>
-  <p>{{ content}}</p>
+  <p>{{ content }}</p>
+  <p>{{ list.0 }}</p>
+  <p>{{ dict.first }}</p>
+  <p>{{ bool }}</p>
 </body>
 </html>
