--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -9,8 +9,9 @@
 </head>
 <body>
   <p>{{ content }}</p>
-  <p>{{ list.0 }}</p>
-  <p>{{ dict.first }}</p>
-  <p>{{ bool }}</p>
+  {% if is_authenticated %}
+    <p>{{ list.0 }}</p>
+    <p>{{ dict.first }}</p>
+  {% endif %}
 </body>
 </html>
