--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block content %}
-	<h1 class="mt-5 pt-5"><strong>FURNITURE STORE HOME</strong></h1>
+	<h1 class="mt-5 pt-5"><strong>{{ content}}</strong></h1>
 {% endblock %}
 
 {% block footer %}
