--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -24,7 +24,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
             <div class="container">
-                <a class="navbar-brand" href="index.html">Home</a>
+                <a class="navbar-brand" href="{% url 'main:index' %}">Home</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -40,7 +40,7 @@
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item  text-white" href="#">Shipping and payment</a></li>
                                 <li><a class="dropdown-item  text-white" href="#">Contact Information</a></li>
-                                <li><a class="dropdown-item  text-white" href="#">About us</a></li>
+                                <li><a class="dropdown-item  text-white" href="{% url 'main:about' %}">About us</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
