--- a/templates/base.html
+++ b/templates/base.html
@@ -48,7 +48,7 @@
                             <a class="nav-link  text-white" href="carts/cart.html">Cart</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link  text-white" href="users/login.html">Сome in</a>
+                            <a class="nav-link  text-white" href="{% url "user:login" %}">Sign in</a>
                         </li>
                         <li class="nav-item dropdown ">
                             <a class="nav-link dropdown-toggle text-white" href="#" role="button"
@@ -57,13 +57,13 @@
                             </a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item  text-white" href="carts/cart.html">Cart</a></li>
-                                <li><a class="dropdown-item  text-white" href="users/profile.html">Personal Area</a>
+                                <li><a class="dropdown-item  text-white" href="{% url "user:profile" %}">Personal Area</a>
                                 </li>
                                 <li><a class="dropdown-item  text-white" href="{% url 'admin:index' %}">Admin panel</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item  text-white" href="#">Go out</a></li>
+                                <li><a class="dropdown-item  text-white" href="{% url "user:logout" %}">Logout</a></li>
                             </ul>
                         </li>
                     </ul>
