--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -8,8 +8,15 @@
             <div class="col-md-6 bg-white p-4 mb-4 mx-3 rounded custom-shadow">
                 <h2 class="text-center mb-4">Authorization</h2>
                 <form action="{% url "user:login" %}" method="post">
-                  {{ form.as_p }}
                   {% csrf_token %}
+                    <div class="mb-3">
+                          <label for="{{ form.username.id_for_label }}" class="form-label">Username</label>
+                        {{ form.username }}
+                    </div>
+                    <div class="mb-3">
+                        <label for="{{ form.password.id_for_label }}" class="form-label">Password</label>
+                        {{ form.password }}
+                    </div>
 {#                    <div class="mb-3">#}
 {#                        <label for="username" class="form-label">Username</label>#}
 {#                        <input type="text" class="form-control" id="username" placeholder="Enter your username" required>#}
