--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -9,14 +9,12 @@
                 <h2 class="text-center mb-4">Authorization</h2>
                 <form action="{% url "user:login" %}" method="post">
                   {% csrf_token %}
-                    <div class="mb-3">
-                          <label for="{{ form.username.id_for_label }}" class="form-label">Username</label>
-                        {{ form.username }}
-                    </div>
-                    <div class="mb-3">
-                        <label for="{{ form.password.id_for_label }}" class="form-label">Password</label>
-                        {{ form.password }}
-                    </div>
+                  {% for item in form %}
+                     <div class="mb-3">
+                        <label for="{{ item.id_for_label }}" class="form-label">{{ item.label }}</label>
+                        {{ item }}
+                     </div>
+                  {% endfor %}
 {#                    <div class="mb-3">#}
 {#                        <label for="username" class="form-label">Username</label>#}
 {#                        <input type="text" class="form-control" id="username" placeholder="Enter your username" required>#}
