--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -9,20 +9,14 @@
                 <h2 class="text-center mb-4">Authorization</h2>
                 <form action="{% url "user:login" %}" method="post">
                   {% csrf_token %}
-                  {% for item in form %}
-                     <div class="mb-3">
-                        <label for="{{ item.id_for_label }}" class="form-label">{{ item.label }}</label>
-                        {{ item }}
-                     </div>
-                  {% endfor %}
-{#                    <div class="mb-3">#}
-{#                        <label for="username" class="form-label">Username</label>#}
-{#                        <input type="text" class="form-control" id="username" placeholder="Enter your username" required>#}
-{#                    </div>#}
-{#                    <div class="mb-3">#}
-{#                        <label for="password" class="form-label">Password</label>#}
-{#                        <input type="password" class="form-control" id="password" placeholder="Enter your password" required>#}
-{#                    </div>#}
+                    <div class="mb-3">
+                        <label for="id_username" class="form-label">Username</label>
+                        <input type="text" name="username" class="form-control" id="id_username" placeholder="Enter your username" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="id_password" class="form-label">Password</label>
+                        <input type="password" name="password" class="form-control" id="id_password" placeholder="Enter your password" required>
+                    </div>
                     <button type="submit" class="btn btn-dark btn-block">Sign in</button>
                 </form>
                 <div class="mt-3">
