--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -11,7 +11,9 @@
                   {% csrf_token %}
                     <div class="mb-3">
                         <label for="id_username" class="form-label">Username</label>
-                        <input type="text" name="username" value="{{ form.username.value }}" class="form-control" id="id_username" placeholder="Enter your username" required>
+                        <input type="text" name="username" value="{% if form.username.value %}
+                        	{{ form.username.value }}
+                        {% endif %}" class="form-control" id="id_username" placeholder="Enter your username" required>
                     </div>
                     <div class="mb-3">
                         <label for="id_password" class="form-label">Password</label>
