--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -9,6 +9,9 @@
                 <h2 class="text-center mb-4">Authorization</h2>
                 <form action="{% url "user:login" %}" method="post">
                   {% csrf_token %}
+                  {% if form.non_field_errors %}
+                  	<p>{{ form.non_field_errors }}</p>
+                  {% endif %} 
                     <div class="mb-3">
                         <label for="id_username" class="form-label">Username</label>
                         <input type="text" class="form-control"  name="username" value="{% if form.username.value %}{{ form.username.value }}{% endif %}"  id="id_username" placeholder="Enter your username" required>
