--- a/templates/base.html
+++ b/templates/base.html
@@ -180,6 +180,7 @@
                 <div class="col-lg-10">
 
                     <!-- Content on the page -->
+                    {% include "includes/notifications.html" %}
                     {% block content %}{% endblock %}
 
                 </div>
