--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -11,11 +11,25 @@
                   {% csrf_token %}
                     <div class="mb-3">
                         <label for="id_username" class="form-label">Username</label>
-                        <input type="text" class="form-control"  name="username" value="{% if form.username.value %}{{ form.username.value }}{% endif %}"  id="id_username" placeholder="Enter your username" required>
+                        <input
+                            type="text"
+                            class="form-control"
+                            name="username" value="{% if form.username.value %}{{ form.username.value }}{% endif %}"
+                            id="id_username"
+                            placeholder="Enter your username"
+                            required
+                        >
                     </div>
                     <div class="mb-3">
                         <label for="id_password" class="form-label">Password</label>
-                        <input type="password" name="password" class="form-control" id="id_password" placeholder="Enter your password" required>
+                        <input
+                            type="password"
+                            name="password"
+                            class="form-control"
+                            id="id_password"
+                            placeholder="Enter your password"
+                            required
+                        >
                     </div>
                     <button type="submit" class="btn btn-dark btn-block">Sign in</button>
                 </form>
