--- a/templates/base.html
+++ b/templates/base.html
@@ -47,10 +47,12 @@
                         <li class="nav-item">
                             <a class="nav-link  text-white" href="carts/cart.html">Cart</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link  text-white" href="{% url "user:login" %}">Sign in</a>
-                        </li>
-                        <li class="nav-item dropdown ">
+                        {% if not user.is_authenticated %}
+                          <li class="nav-item">
+                              <a class="nav-link  text-white" href="{% url "user:login" %}">Sign in</a>
+                          </li>
+                        {% else %}
+                          <li class="nav-item dropdown ">
                             <a class="nav-link dropdown-toggle text-white" href="#" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">
                                 My profile
@@ -59,13 +61,16 @@
                                 <li><a class="dropdown-item  text-white" href="carts/cart.html">Cart</a></li>
                                 <li><a class="dropdown-item  text-white" href="{% url "user:profile" %}">Personal Area</a>
                                 </li>
-                                <li><a class="dropdown-item  text-white" href="{% url 'admin:index' %}">Admin panel</a></li>
+                                {% if user.is_admin or user.is_staff %}
+                                	<li><a class="dropdown-item  text-white" href="{% url 'admin:index' %}">Admin panel</a></li>
+                                {% endif %}
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
                                 <li><a class="dropdown-item  text-white" href="{% url "user:logout" %}">Logout</a></li>
                             </ul>
                         </li>
+                        {% endif %}
                     </ul>
                     <form class="d-flex" role="search" action="{% url "catalog:search" %}" method="get">
                         <input class="form-control me-2" type="search" name="q" placeholder="Search" aria-label="Search">
