--- a/templates/base.html
+++ b/templates/base.html
@@ -45,7 +45,7 @@
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link  text-white" href="carts/cart.html">Cart</a>
+                            <a class="nav-link  text-white" href="{% url "user:users-cart" %}">Cart</a>
                         </li>
                         {% if not user.is_authenticated %}
                           <li class="nav-item">
